# skill-laws

./: .gitignore  README.md
auto_skill_manager/: README.md  pyproject.toml
auto_skill_manager/examples/: candidate.sample.yaml  library.sample.yaml
auto_skill_manager/tests/: test_analyzer.py  test_cli.py  test_loaders.py  test_optimizer.py  test_reporting.py  test_runtime.py
auto_skill_manager/viewer/: index.html  manager.html
skill_law/: README.md  pyproject.toml  run_all_skill_law_scripts.py  run_skill_law_smoke_test.py
skill_law/F01_logarithmic_decay/: run_f01_cross_model_scaling_probe.py  run_f01_route_decay_sweep.py
skill_law/F02_pipeline_compounding/: analyze_f02_cascade_penalty_decomposition.py  run_f02_transition_cascade_audit.py
skill_law/F03_rebound_effect/: analyze_f03_position_profile_rebound.py  run_f03_step_position_rebound_probe.py
skill_law/F04_description_quality/: analyze_f04_controlled_description_quality.py  run_f04_controlled_description_quality.py
skill_law/F05_local_competition/: analyze_f05_local_competition_index.py  run_f05_similarity_competition_stress.py
skill_law/F06_failure_geometry/: analyze_f06_route_asymmetry_cross_model.py  run_f06_structured_boundary_rewrite.py
skill_law/F07_anchor_removal_black_hole/: run_f07_query_anchor_ablation.py  run_f07_real_skills_anchor_stress_n100.py
skill_law/F08_dual_trigger_protocol/: run_f08_dual_trigger_hijack_validation.py  run_f08_protocol_ablation.py
skill_law/F09_routing_independence/: analyze_f09_clustered_routing_independence.py  analyze_f09_mixed_effects_independence.py
(+37 files in other folders)
